<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- global -->
    <string name="app_name">ActuSeries</string>

    <!-- main menu -->
    <string name="action_logout">Log out</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>

    <!-- episode detail activity -->
    <string name="episode_detail_title">Episode Detail</string>
    <string name="episodeDetailActivity_markWatched">Mark as watched</string>
    <string name="episodeDetailActivity_unmarkWatched">Unmark as watched</string>

    <!-- login activity -->
    <string name="loginActivity_connect">Connect</string>
    <string name="loginActivity_login">Login</string>
    <string name="loginActivity_noAccountYet">No account yet ?</string>
    <string name="loginActivity_password">Password</string>
    <string name="loginActivity_signup">Sign up</string>

    <!-- serie detail activity -->
    <string name="serie_detail_title">Serie Detail</string>
    <string name="serieDetailActivity_noEpisodes">No episodes</string>
    <string name="serieDetailActivity_status">Status : </string>
    <string name="serieDetailActivity_button_add_serie">Add this serie</string>
    <string name="serieDetailActivity_button_archive">Archive</string>
    <string name="serieDetailActivity_button_unarchive">Unarchive</string>
    <string name="serieDetailActivity_toast_episode_marked">episode marked</string>
    <string name="serieDetailActivity_toast_serie_archived">serie archived</string>
    <string name="serieDetailActivity_toast_serie_unarchived">serie unarchived</string>
    <string name="serieDetailActivity_toast_serie_added">serie successfully added !</string>



    <!-- series list -->
    <string name="seriesList_active">Active</string>
    <string name="seriesList_all">All</string>
    <string name="seriesList_archived">Archived</string>
    <string name="seriesList_watchlist">Watchlist</string>

    <!-- settings activity -->
    <string name="settingsActivity_title">Settings</string>

    <!-- settings fragment -->
    <string name="settingsFragment_title_stayLoggedIn">Stay logged in</string>
    <string name="settingsFragment_desription_stayLoggedIn">Keep the connection active when closing the application</string>
    <string name="settingsFragment_header_user">User</string>
    <string name="settingsFragment_title_login">User name</string>
    <string name="settingsFragment_desription_login">Your account user name</string>
    <string name="settingsFragment_title_token">Authentication token</string>
    <string name="settingsFragment_description_token">Your current connection token</string>

    <!-- signup activity -->
    <string name="signup_title">Register</string>
    <string name="signupActivity_email">E-mail</string>
    <string name="signupActivity_login">Login</string>
    <string name="signupActivity_password">Password</string>
    <string name="signupActivity_passwordConfirm">Confirm password</string>
    <string name="signupActivity_signup">Submit</string>

    <!-- search activity -->
    <string name="searchActivity_title">Search</string>
    <string name="lenghtEpisode">Length :</string>
    <string name="genre">Genre :</string>
    <string name="statut">Statut :</string>

    <!-- settings keys -->
    <string name="settingsKey_stayLoggedIn">stay_logged_in</string>
    <string name="settingsKey_login">login</string>
    <string name="settingsKey_token">token</string>
    <!-- -->
</resources>