<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context=".SignUpActivity">

    <EditText
        android:id="@id/signup_editText_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:hint="@string/signupActivity_login"/>

    <EditText
        android:id="@id/signup_editText_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup_editText_login"
        android:layout_marginTop="@dimen/default_margin_top"
        android:hint="@string/signupActivity_email"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@id/signup_editText_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup_editText_email"
        android:layout_marginTop="@dimen/default_margin_top"
        android:hint="@string/signupActivity_password"
        android:inputType="textPassword"/>

    <EditText
        android:id="@id/signup_editText_passwordConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup_editText_password"
        android:layout_marginTop="@dimen/default_margin_top"
        android:hint="@string/signupActivity_passwordConfirm"
        android:inputType="textPassword"/>

    <Button
        android:id="@id/signup_button_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup_editText_passwordConfirm"
        android:layout_marginTop="@dimen/default_margin_top"
        android:text="@string/signupActivity_signup"/>

</RelativeLayout>
