<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <TextView
        android:id="@id/serieDetail_textView_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        tools:text="Titre de la série"/>

    <TextView
        android:id="@id/serieDetail_textView_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/serieDetail_textView_title"
        android:textAppearance="?android:attr/textAppearanceMedium"
        tools:text="Statut : En cours"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:id="@+id/serieDetail_simple_scroll_view"
        android:layout_below="@id/serieDetail_textView_status">

        <com.ms.square.android.expandabletextview.ExpandableTextView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:expandableTextView="http://schemas.android.com/apk/res-auto"
            android:id="@id/serieDetail_textView_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            expandableTextView:maxCollapsedLines="5"
            expandableTextView:animDuration="200">
            <TextView
                android:id="@id/expandable_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                tools:text="Ceci est une série GÉ-NIA-LI-SSIME !! Il faut absolument la voir !!! Nan, mais sérieux en plus il y a Ned qui meurt a la fin de la saison 1 !"/>
            <ImageButton
                android:id="@id/expand_collapse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_gravity="right|bottom"
                android:background="@android:color/transparent"/>
        </com.ms.square.android.expandabletextview.ExpandableTextView>



        </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/statut"
        android:id="@+id/statutSimple"
        android:background="#eeeeee"
        android:layout_marginTop="40dp"
        android:layout_below="@id/serieDetail_simple_scroll_view"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/genre"
        android:id="@+id/genreSimple"
        android:background="#eeeeee"
        android:layout_below="@+id/lenghtEpisodeSimple"
        android:layout_marginTop="37dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lenghtEpisode"
        android:id="@+id/lenghtEpisodeSimple"
        android:background="#eeeeee"
        android:layout_marginTop="34dp"
        android:layout_below="@+id/statutSimple"
        android:layout_alignRight="@+id/statutSimple"
        android:layout_alignEnd="@+id/statutSimple"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/serieDetailActivity_button_add_serie"
        android:id="@+id/button_ajout_serie"
        android:layout_marginTop="57dp"
        android:layout_below="@+id/genreSimple"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
